--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -8,9 +8,9 @@
   }
   
   
-@Article{thereferencecanbewhatever,
+@Article{tydr,
     title = {Welcome to the {tidyverse}},
-    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain Francois and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Muller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
     year = {2019},
     journal = {Journal of Open Source Software},
     volume = {4},
@@ -19,11 +19,95 @@
     doi = {10.21105/joss.01686},
   }  
   
+@article{fromstats,
+    ISSN = {00390526, 14679884},
+    URL = {http://www.jstor.org/stable/2681191},
+    author = {John A. Nelder},
+    journal = {Journal of the Royal Statistical Society. Series D (The Statistician)},
+    number = {2},
+    pages = {257--269},
+    publisher = {[Royal Statistical Society, Wiley]},
+    title = {From Statistics to Statistical Science},
+    volume = {48},
+    year = {1999}
+  }
+
+@inproceedings{onlineanxiety,
+    author = {Saade, Raafat and Kira, Dennis and Mak, Tak and Nebebe, Fassil},
+    year = {2017},
+    month = {01},
+    pages = {147-157},
+    title = {Anxiety & Performance in Online Learning},
+    doi = {10.28945/3736}
+  }
+
+@unknown{mathexample,
+    author = {Gelman, Andrew},
+    year = {2019},
+    month = {06},
+    pages = {},
+    title = {Know your population and know your model: Using model-based regression and poststratification to generalize findings beyond the observed sample}
+  }
+
+@article{sensitiveinfo,
+     ISSN = {01621459},
+     URL = {http://www.jstor.org/stable/2289227},
+     author = {Kent H. Marquis and M. Susan Marquis and J. Michael Polich},
+     journal = {Journal of the American Statistical Association},
+     number = {394},
+     pages = {381--389},
+     publisher = {[American Statistical Association, Taylor & Francis, Ltd.]},
+     title = {Response Bias and Reliability in Sensitive Topic Surveys},
+     volume = {81},
+     year = {1986}
+   }
+
+@article{intro,
+      author = {Hanretty, Chris},
+      year = {2019},
+      month = {07},
+      pages = {147892991986477},
+      title = {An Introduction to Multilevel Regression and Post-Stratification for Estimating   Constituency Opinion},
+      volume = {18},
+      journal = {Political Studies Review},
+      doi = {10.1177/1478929919864773}
+  }
+
+@article{forcast,
+      title = {Forecasting elections with non-representative polls},
+      journal = {International Journal of Forecasting},
+      volume = {31},
+      number = {3},
+      pages = {980 - 991},
+      year = {2015},
+      issn = {0169-2070},
+      doi = {https://doi.org/10.1016/j.ijforecast.2014.06.001},
+      url = {http://www.sciencedirect.com/science/article/pii/S0169207014000879},
+      author = {Wei Wang and David Rothschild and Sharad Goel and Andrew Gelman}
+  }
+
+@Article{brmone,
+    title = {{brms}: An {R} Package for {Bayesian} Multilevel Models
+      Using {Stan}},
+    author = {Paul-Christian Bürkner},
+    journal = {Journal of Statistical Software},
+    year = {2017},
+    volume = {80},
+    number = {1},
+    pages = {1--28},
+    doi = {10.18637/jss.v080.i01},
+    encoding = {UTF-8},
+  }
   
-@Manual{citeLahman,
-    title = {Lahman: Sean `Lahman' Baseball Database},
-    author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
-    year = {2020},
-    note = {R package version 8.0-0},
-    url = {https://CRAN.R-project.org/package=Lahman},
-  }  
+@Article{brmtwo,
+    title = {Advanced {Bayesian} Multilevel Modeling with the {R}
+      Package {brms}},
+    author = {Paul-Christian Bürkner},
+    journal = {The R Journal},
+    year = {2018},
+    volume = {10},
+    number = {1},
+    pages = {395--411},
+    doi = {10.32614/RJ-2018-017},
+    encoding = {UTF-8},
+  }
